--- a/mytest/testing.ipynb
+++ b/mytest/testing.ipynb
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Oct 13 2022, 21:13:48) [GCC 12.2.0]"
   },
   "vscode": {
    "interpreter": {
